# stmSynth

./: .gitignore  LICENSE  readme.md  readme.org  readme.tex
env/: CMakeLists.txt  makefile  stm_lxc.sh
org/: todo.org
testProj/: CMakeLists.txt  compile_commands.json
testProj/Inc/: dac.h  dac5102.h  gpio.h  oled.h  oled8080.h  rcc.h  spi.h  stm32f4xx_hal_conf.h
testProj/Src/: dac.c  dac5102.c  gpio.c  main.c  oled.c  oled8080.c  rcc.c  spi.c  system_stm32f4xx.c
testProj/breakout-pcb's/: Thonk jack breakouts.kicad_sch  Untitled.kicad_prl  Untitled.kicad_pro  Untitled.kicad_sch  breakout-pcb's.kicad_prl  breakout-pcb's.kicad_pro  breakout-pcb's.kicad_sch  dac_breakout.kicad_sch  test_bom.kicad_pcb  test_bom.kicad_prl  test_bom.kicad_pro  usb_c_breakout.kicad_sch
testProj/breakout-pcb's/ADP150AUJZ-2.0-R7/: ADP150AUJZ-2.0-R7.kicad_sym  SOT95P280X100-5N.kicad_mod
testProj/breakout-pcb's/DAC8568ICPW/: DAC8568ICPW.kicad_sym  SOP65P640X120-16N.kicad_mod
testProj/breakout-pcb's/GSB1C41110SSHR/: AMPHENOL_GSB1C41110SSHR.kicad_mod  GSB1C41110SSHR.kicad_sym
testProj/breakout-pcb's/OPA2172ID/: OPA2172ID.kicad_sym  SOIC127P599X175-8N.kicad_mod
testProj/breakout-pcb's/OPA4172IDR/: OPA4172IDR.kicad_sym  SOIC127P600X175-14N.kicad_mod
testProj/breakout-pcb's/bom/: ibom.html
testProj/breakout-pcb's/breakout_dac/breakout_dac/: breakout_dac-B_Cu.gbr  breakout_dac-B_Mask.gbr  breakout_dac-B_Paste.gbr  breakout_dac-B_Silkscreen.gbr  breakout_dac-Edge_Cuts.gbr  breakout_dac-F_Cu.gbr  breakout_dac-F_Mask.gbr  breakout_dac-F_Paste.gbr  breakout_dac-F_Silkscreen.gbr  breakout_dac-job.gbrjob  breakout_dac.csv  breakout_dac.kicad_pcb  breakout_dac.kicad_prl  breakout_dac.kicad_pro  breakout_dac.kicad_sch  breakout_dac_bak.kicad_prl  breakout_dac_bak.kicad_pro  fp-info-cache  monkey_silk.kicad_mod
testProj/breakout-pcb's/breakout_dac/breakout_dac/bom/: ibom.html
testProj/breakout-pcb's/breakout_dac/breakout_dac/grbr/: breakout_dac-B_Cu.gbr  breakout_dac-B_Mask.gbr  breakout_dac-B_Paste.gbr  breakout_dac-B_Silkscreen.gbr  breakout_dac-Edge_Cuts.gbr  breakout_dac-F_Cu.gbr  breakout_dac-F_Mask.gbr  breakout_dac-F_Paste.gbr  breakout_dac-F_Silkscreen.gbr  breakout_dac-NPTH.drl  breakout_dac-PTH.drl  breakout_dac-job.gbrjob
testProj/breakout-pcb's/breakout_jacks/: breakout_jacks.kicad_pcb  breakout_jacks.kicad_prl  breakout_jacks.kicad_pro  breakout_jacks.kicad_sch
testProj/breakout-pcb's/breakout_jacks/bom/: ibom.html
testProj/breakout-pcb's/breakout_led/: breakout_led.kicad_pcb  breakout_led.kicad_prl  breakout_led.kicad_pro  breakout_led.kicad_sch  fp-info-cache
testProj/breakout-pcb's/breakout_pwr/: breakout_pwr-B_Cu.gbr  breakout_pwr-B_Mask.gbr  breakout_pwr-B_Paste.gbr  breakout_pwr-B_Silkscreen.gbr  breakout_pwr-Edge_Cuts.gbr  breakout_pwr-F_Cu.gbr  breakout_pwr-F_Mask.gbr  breakout_pwr-F_Paste.gbr  breakout_pwr-F_Silkscreen.gbr  breakout_pwr-job.gbrjob  breakout_pwr.kicad_pcb  breakout_pwr.kicad_prl  breakout_pwr.kicad_pro  breakout_pwr.kicad_sch  freerouting.frb
testProj/breakout-pcb's/breakout_pwr/bom/: ibom.html
testProj/breakout-pcb's/breakout_pwr/grbr/: breakout_pwr-B_Cu.gbr  breakout_pwr-B_Mask.gbr  breakout_pwr-B_Paste.gbr  breakout_pwr-B_Silkscreen.gbr  breakout_pwr-Edge_Cuts.gbr  breakout_pwr-F_Cu.gbr  breakout_pwr-F_Mask.gbr  breakout_pwr-F_Paste.gbr  breakout_pwr-F_Silkscreen.gbr  breakout_pwr-NPTH.drl  breakout_pwr-PTH.drl  breakout_pwr-job.gbrjob
testProj/breakout-pcb's/h7:jp8080 voice/: #auto_saved_files#  _autosave-h7:jp8080 voice.kicad_sch  ~h7:jp8080 voice.kicad_sch.lck
testProj/breakout-pcb's/pedals/: pedals.kicad_pcb  pedals.kicad_prl  pedals.kicad_pro  pedals.kicad_sch
testProj/pcb/: braids_v50.kicad_prl
testProj/pcb/braids_v50/: braids_v50.kicad_pro
vco/: CMakeLists.txt
vco/src/: main.c
