cmake_minimum_required(VERSION 3.5)
project(stm32f4_test LANGUAGES CXX C ASM VERSION 1.0)

set(MCU                         STM32F411RE)
set(ARCH                        cortex-m4)
set(CMSIS_VERSION               5.9.0)
set(HAL_DEVICE_NAME             STM32F4xx)
set(USE_HAL                     YES) # remove HAL files from "project" and "drivers" then set to NO, use only CMSIS
add_definitions(-DSTM32F411xE)
add_definitions(-DCMAKE_EXPORT_COMPILE_COMMANDS=1)
set(CMAKE_C_STANDARD            11)
set(CMAKE_CXX_STANDARD          20)
set(CMAKE_C_COMPILER            arm-none-eabi-gcc)
set(CMAKE_CXX_COMPILER          arm-none-eabi-g++)
set(CMAKE_EXE_LINKER_LAUNCHER   arm-none-eabi-gcc)
set(CMAKE_ASM_COMPILER          arm-none-eabi-gcc)
set(OBJCOPY                     arm-none-eabi-objcopy)
set(SIZE                        arm-none-eabi-size)
set(CMAKE_CXX_EXTENSIONS        OFF)
set(CMAKE_C_EXTENSIONS          OFF)
#-mthumb-interwork
set(COMMON_COMPILE_FLAGS  -mcpu=${ARCH} -Os --specs=nosys.specs -Wl,--gc-sections --specs=nano.specs -mfloat-abi=soft -mthumb  -Wall -MMD -MP -fmessage-length=0 -ffunction-sections -fdata-sections -fstack-usage)
set(LINK_FLAGS -Wl,-Map=${PROJECT_SOURCE_DIR}/Build/${PROJECT_NAME}.map -static -Wl,--start-group -lc -lm -lstdc++ -lsupc++ -Wl,--end-group)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fno-rtti -fno-exceptions") # NO C++ RTTI and exception
set(CMAKE_ASM_FLAGS ${CMAKE_ASM_FLAGS} "-xassembler-with-cpp")
file(GLOB PROJECT_SRCS "${CMAKE_SOURCE_DIR}/../Nokia-LCD5110-HAL/src/*c" "${CMAKE_SOURCE_DIR}/Src/*.c" "${CMAKE_SOURCE_DIR}/Src/*.cpp" "${CMAKE_SOURCE_DIR}/Src/*.s")
set(CMSIS_HDRS ${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/CMSIS/DSP/Include/dsp ${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/CMSIS/DSP/Include ${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/CMSIS/Device/ST/${HAL_DEVICE_NAME}/Include ${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/CMSIS/Include)

if(${USE_HAL})
set(HAL_HDRS ${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/${HAL_DEVICE_NAME}_HAL_Driver/Inc Inc)
file(GLOB HAL_SRCS "${CMAKE_SOURCE_DIR}/../STM32CubeF4/Drivers/${HAL_DEVICE_NAME}_HAL_Driver/Src/*.c")
endif()
file(GLOB STARTUP_FILE "${CMAKE_SOURCE_DIR}/Src/*.s")
file(GLOB LINKER_SCRIPT "${CMAKE_SOURCE_DIR}/Src/*.ld")
include_directories(/Inc ${CMAKE_SOURCE_DIR}/../Nokia-LCD5110-HAL/src/ #[[RPOJECT_HDRS]] ${CMSIS_HDRS} $<$<BOOL:${USE_HAL}>:${HAL_HDRS}>)
add_executable(${PROJECT_NAME}.elf ${STARTUP_FILE} $<$<BOOL:${USE_HAL}>:${HAL_SRCS}> ${PROJECT_SRCS} )
set_target_properties(${PROJECT_NAME}.elf PROPERTIES CXX_STANDARD 20)
target_compile_definitions(${PROJECT_NAME}.elf PUBLIC ${MCU} $<$<BOOL:${USE_HAL}>:USE_HAL_DRIVER>)
target_compile_options(${PROJECT_NAME}.elf PUBLIC ${COMMON_COMPILE_FLAGS})
target_link_options(${PROJECT_NAME}.elf PUBLIC ${COMMON_COMPILE_FLAGS} -T${LINKER_SCRIPT} ${LINK_FLAGS})
add_custom_command(TARGET ${PROJECT_NAME}.elf POST_BUILD
        COMMAND ${OBJCOPY} -O binary "${PROJECT_NAME}.elf" "${PROJECT_NAME}.bin"
        COMMAND ${SIZE} --format=berkeley ${PROJECT_NAME}.elf)
